--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -1,6 +1,6 @@
 # Gopkg.toml example
 #
-# Refer to https://github.com/golang/dep/blob/master/docs/Gopkg.toml.md
+# Refer to https://golang.github.io/dep/docs/Gopkg.toml.html
 # for detailed Gopkg.toml documentation.
 #
 # required = ["github.com/user/thing/cmd/thing"]
@@ -26,12 +26,20 @@
 
 
 [[constraint]]
-  name = "docker.io/go-docker"
-  version = "1.0.0"
+  branch = "master"
+  name = "github.com/jinzhu/configor"
 
 [[constraint]]
-  name = "github.com/docker/go-connections"
-  version = "0.3.0"
+  name = "github.com/sirupsen/logrus"
+  version = "1.0.5"
+
+[[constraint]]
+  name = "github.com/yosssi/gmq"
+  version = "0.0.1"
+
+[[constraint]]
+  branch = "v2"
+  name = "gopkg.in/mgo.v2"
 
 [prune]
   go-tests = true
