--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -38,8 +38,8 @@
   version = "0.0.1"
 
 [[constraint]]
-  branch = "v2"
-  name = "gopkg.in/mgo.v2"
+  name = "github.com/brocaar/lorawan"
+  branch = "master"
 
 [prune]
   go-tests = true
